[package]
name = "rpc"
version = "0.1.0"
authors = ["Spencer Sharkey <spencer@sf-n.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rpc"
path = "rust/lib.rs"

[dependencies]
tonic = "0.2"
tokio = { version = "0.2", features = ["macros"] }
prost = "0.6"
prost-types = "0.6"

[build-dependencies]
tonic-build = "0.2"